--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,8 @@ header .container img {
     z-index: -1;
 }
 header .logo a{
+    position: relative;
+    top: -15px;
     float: left; /* senao ele abaixa a lista da direita pelo display block */
     background-image: url('../img/logo2.png');
     background-size: cover;
@@ -82,12 +84,8 @@ header nav.mobile-menu {
     background-size: 100% 100%;
     cursor: pointer;
 }
-nav.mobile-menu:hover ul {
-    opacity: 1;
-}
 header nav.mobile-menu ul {
-    opacity: 0;
-    transition: 0.5s;
+    display: none;
     font-size: 20px;
     background: rgb(0,0,0);
     background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(0,64,59,1) 100%);
@@ -97,6 +95,7 @@ header nav.mobile-menu ul {
     top: 90px;
     list-style-type: none;
     text-align: center;
+    z-index: 2;
 }
 nav.mobile-menu ul li {
     border-bottom: 1px solid black;
@@ -114,6 +113,15 @@ nav.mobile-menu ul li a {
     max-width: 600px;
     float: right;
     margin: 150px 150px 0px 150px;
+    animation: call1 2s;
+}
+@keyframes call1 {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 .call1 h2 {
     font-size: 60px;
@@ -392,6 +400,18 @@ section.section4 {
     background-color: white;
     border: 5px solid rgba(12,80,65,1);
 }
+footer {
+    padding: 40px 2%;
+    color: white;
+    font-size: 14px;
+    background-color: rgb(26, 32, 30);
+}
+footer p:nth-of-type(1){
+    float: left;
+}
+footer p:nth-of-type(2) {
+    float: right;
+}
 
 /* MEDIA QUERIES */
 
@@ -491,6 +511,20 @@ section.section4 {
         width: 100%;
         height: 100%;
         padding-top: 0;
+    }
+    footer {
+        padding: 20px 2%;
+        color: white;
+        text-align: center;
+        font-size: 14px;
+        background-color: rgb(26, 32, 30);
+    }
+    footer p:nth-of-type(1){
+        float: none;
+    }
+    footer p:nth-of-type(2) {
+        margin-top: 8px;
+        float: none;
     }
 }
 @media screen and (max-height: 805px) {
