--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,8 @@ html, body {
 }
 header {
     width: 100%;
-    height: 90vh; /* 90% com base no tamanho da nossa tela */
+    height: 90vh;
     min-height: 800px;
-    /*max-height: 700px;*/
     padding: 25px 2%;
     background: rgba(0, 0, 0, 0.65);
     /* OUTRO MÉTODO DIRETAMENTE NA HEADER =
@@ -28,7 +27,6 @@ header {
     background-repeat: no-repeat;*/
 }
 header .container img {
-    /*max-height: 700px;*/
     position: absolute;
     object-fit: cover;
     min-height: 800px;
@@ -41,7 +39,7 @@ header .container img {
 header .logo a{
     position: relative;
     top: -15px;
-    float: left; /* senao ele abaixa a lista da direita pelo display block */
+    float: left;
     background-image: url('../img/logo2.png');
     background-size: cover;
     width: 230px;
@@ -54,12 +52,10 @@ header nav.desktop-menu ul {
     list-style-type: none;
 }
 header nav.desktop-menu li {
-    /* aumentamos width padrão para os itens da lista nao se moverem ao usarmos hover */
     text-align: center;
     width: 125px;
     float: left;
 }
-/*se usar o > tem que colocar a ordem certinha que esta no html para especificar */
 header nav.desktop-menu a {
     font-size: 18px;
     text-decoration: none;
@@ -202,7 +198,6 @@ section.section1 .container{
     background-size: 100% 100%;
 }
 section.section2 {
-    /*margin-top: 30px;*/
     padding: 0px 3%;
     background: rgb(255,255,255);
     background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(5,55,55,0.5398831407563025) 100%);
@@ -358,8 +353,6 @@ section.section4 {
     border-radius: 20px;
     background: rgb(0,0,0);
     background: radial-gradient(circle, rgba(0,0,0,1) 23%, rgba(0,37,34,1) 100%);
-    /* line-height: 44px; */
-    /* text-align: center; não precisa pois input centraliza automaticamente */
 }
 .form form input[type=submit]:hover {
     transition: 0.1s;
@@ -404,6 +397,22 @@ footer {
     color: white;
     font-size: 14px;
     background-color: rgb(26, 32, 30);
+}
+footer .container nav {
+    width: 100%;
+    padding: 0px 0px 50px 0px;
+}
+footer .container nav.desktop-menu ul {
+    list-style-type: none;
+}
+footer .container nav.desktop-menu li {
+    float: left;
+    padding-right: 60px;
+}
+footer .container nav.desktop-menu a {
+    font-size: 18px;
+    text-decoration: none;
+    color: white;
 }
 footer p:nth-of-type(1){
     float: left;
@@ -517,6 +526,14 @@ footer p:nth-of-type(2) {
         text-align: center;
         font-size: 14px;
         background-color: rgb(26, 32, 30);
+    }
+    footer .container nav {
+        padding: 0px 0px 20px 0px;
+    }
+    footer .container nav.desktop-menu li {
+        float: none;
+        display: inline-block;
+        padding-right: 30px;
     }
     footer p:nth-of-type(1){
         float: none;
