--- a/css/style.css
+++ b/css/style.css
@@ -251,10 +251,18 @@ section.section3 {
     width: 50%;
     padding: 140px 20px 90px 0px;
 }
+.scrollTeam {
+    max-width: 600px;
+    padding-left: 20px;
+    overflow: hidden;
+}
+.scroll-wraper {
+    width: 100%;
+}
 .about-aut {
     float: left;
-    max-width: 600px;
-    padding-left: 30px;
+    width: 100%;
+    padding: 0 20px;
 }
 .title-aut {
     float: left;
@@ -290,7 +298,7 @@ section.section3 {
 .slider-bullets {
     float: left;
     width: 100%;
-    padding-left: 30px;
+    padding-left: 40px;
     margin-top: 12px;
 }
 .slider-bullets span {
@@ -299,7 +307,7 @@ section.section3 {
     float: left;
     border-radius: 5px;
     margin-right: 8px;
-    background-color: #adadad;
+    background-color: rgb(200, 200, 200);
     cursor: pointer;
 }
 section.section4 {
